--- a/so-yeu-ly-lich/in4hjnh.html
+++ b/so-yeu-ly-lich/in4hjnh.html
@@ -20,5 +20,6 @@
 <h4 style="color: black">-là 1 trong hơn 7 tỷ người đẹp nhất thế giới</h4>
 <h4 style="color: black">-là 1 trong 90 triệu người nói tiếng viết tốt nhất thế giới</h4>
 <h4 style="color: #0942ec">loading.......</h4>
+<a href="index.html">back</a>
 </body>
 </html>
