--- a/so-thich-doi-song/sothich-doisong.html
+++ b/so-thich-doi-song/sothich-doisong.html
@@ -30,5 +30,13 @@
 <h4 style="color: red">thích vàng</h4>
 <h4 style="color: red">thích kim cương</h4>
 <h1>túm lại là thích đủ thứ !!</h1>
+<button type="button" onclick="quay_lai_trang_truoc()">trở lại trang trước</button>
+
+<script>
+    function quay_lai_trang_truoc(){
+        history.back();
+    }
+</script>
+<br><br>
 </body>
 </html>
