--- a/thanh-phan-gia-dinh/thanhphan-giadinh.html
+++ b/thanh-phan-gia-dinh/thanhphan-giadinh.html
@@ -17,5 +17,13 @@
 <h4 style="color: #1f1c1c">thôi cứ để chữ loading ở cuối nhé hôm nào thông não thì update hihi và hihi</h4>
 <h4 style="color: #1f1c1c">bye bye</h4>
 <h4 style="color: #1f1c1c">loading........................................!!!!</h4>
+<button type="button" onclick="quay_lai_trang_truoc()">trở lại trang trước</button>
+
+<script>
+    function quay_lai_trang_truoc() {
+        history.back();
+    }
+</script>
+<br><br>
 </body>
 </html>
