--- a/so-yeu-ly-lich/in4hjnh.html
+++ b/so-yeu-ly-lich/in4hjnh.html
@@ -6,20 +6,28 @@
 </head>
 <body style="background: palegoldenrod">
 <h1 style="color:deeppink">Sơ yếu lí lịch về Hjnh</h1>
-<img src="IMG_20201017_124741%20(2).jpg"style="width:400px;height:480px;">
+<img src="IMG_20201017_124741%20(2).jpg" style="width:400px;height:480px;">
 <h4 style="color: red">-HJNH tên thật là Nguyễn Xuân Hjnh</h4>
 <h4 style="color: black">-biệt danh : Kee</h4>
 <h4 style="color: black">-sinh ngày 14 / 03 / 2002 "tuổi con ngựa"</h4>
 <h4 style="color: black">-quê quán : kim quan - Thạch Thất - TP Hà Nội</h4>
 <h4 style="color: black">-từ 1 đến 6 tuổi ở đâu làm gì : ở nhà ăn và ngủ </h4>
 <h4 style="color: black">-từ 6 đến 12 tuổi ở đâu làm gì : ở nhà , ăn , ngủ và đi học </h4>
-<h4 style="color: black">-từ 12 đến 18 tuổi ở đâu làm gì : ở nhà ít hơn , ngủ ít hơn ở trường nhiều hơn và đi làm thêm</h4>
+<h4 style="color: black">-từ 12 đến 18 tuổi ở đâu làm gì : ở nhà ít hơn , ngủ ít hơn ở trường nhiều hơn và đi làm
+    thêm</h4>
 <h4 style="color: black">-hiện tại ở đâu và làm gì : học tập tại FPT aptech , ăn bám gia đình</h4>
 <h4 style="color: black">-trình độ học vấn : 12/12</h4>
 <h4 style="color: #a910c4">-bằng cấp và danh hiệu : tiến sĩ ngành tư duy chém gió "tự phong tặng"</h4>
 <h4 style="color: black">-là 1 trong hơn 7 tỷ người đẹp nhất thế giới</h4>
 <h4 style="color: black">-là 1 trong 90 triệu người nói tiếng viết tốt nhất thế giới</h4>
 <h4 style="color: #0942ec">loading.......</h4>
-<a href="index.html">back</a>
+<button type="button" onclick="quay_lai_trang_truoc()">trở lại trang trước</button>
+
+<script>
+    function quay_lai_trang_truoc() {
+        history.back();
+    }
+</script>
+<br><br>
 </body>
 </html>
