--- a/thanh-phan-gia-dinh/thanhphan-giadinh.html
+++ b/thanh-phan-gia-dinh/thanhphan-giadinh.html
@@ -5,6 +5,7 @@
     <title>thành phần gia đình</title>
 </head>
 <body style="background: #f6bfdf">
+<center>
 <h1 style="color: #0073ff">Hjnh và gia đình</h1>
 <h4 style="color: #1f1c1c">là con út trong gia đình có 3 anh chị em</h4>
 <h4 style="color: #1f1c1c">bố là chủ tịch</h4>
@@ -24,6 +25,6 @@
         history.back();
     }
 </script>
-<br><br>
+</center>
 </body>
 </html>
