--- a/so-thich-doi-song/sothich-doisong.html
+++ b/so-thich-doi-song/sothich-doisong.html
@@ -5,7 +5,7 @@
     <title>sở thich và đời sống</title>
 </head>
 <body style="background: #a4e95d">
-<h1 style="color: red">tổng hợp sở thích trên nhiều lĩnh vực của Hjnh</h1>
+<center><h1 style="color: red">tổng hợp sở thích trên nhiều lĩnh vực của Hjnh</h1>
 <h2 style="color: black">sở thích ăn uống</h2>
 <h4 style="color: black">-không quá cầu kì việc ăn uống,chỉ đơn giản là ăn đúng bữa , khoa học và đủ dinh dưỡng</h4>
 <h4 style="color: black">-thích thì rất nhiều món nên thôi khỏi kể còn ghét thì :thịt chó,thịt mỡ,cá</h4>
@@ -37,6 +37,6 @@
         history.back();
     }
 </script>
-<br><br>
+</center>
 </body>
 </html>
