--- a/so-yeu-ly-lich/in4hjnh.html
+++ b/so-yeu-ly-lich/in4hjnh.html
@@ -5,7 +5,8 @@
     <title>nguyễn xuân hjnh</title>
 </head>
 <body style="background: palegoldenrod">
-<center><h1 style="color:deeppink">Sơ yếu lí lịch về Hjnh</h1>
+<div id="content" align="center">
+<h1 style="color:deeppink">Sơ yếu lí lịch về Hjnh</h1>
 <img src="IMG_20201017_124741%20(2).jpg" style="width:400px;height:480px;">
 <h4 style="color: red">-HJNH tên thật là Nguyễn Xuân Hjnh</h4>
 <h4 style="color: black">-biệt danh : Kee</h4>
@@ -28,6 +29,6 @@
         history.back();
     }
 </script>
-</center>
+</div>
 </body>
 </html>
