thay mot phan noi dung

--- a/index.html
+++ b/index.html
@@ -1,37 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<meta name="keywords" content="14032002jhuytrewq hjnh hjnh hjnh">
 <head>
     <meta charset="UTF-8">
-    <title>In for of hjnh</title>
+    <title>hjnh test all</title>
 </head>
-<body style="background: cyan">
-<div id="content" align="center">
-    <h1 style="color:red">xin chào! mình là Hjnh</h1>
-    <h3>dưới đây là tất cả những gì liên quan đến mình</h3>
-    <ul>
-        <li>
-            <button title="bấm vào để thêm thông tin về Hjnh"><a href="so-yeu-ly-lich/in4hjnh.html">sơ yếu lý lịch</a>
-            </button>
-        </li>
-        <br><br>
-        <li>
-            <button title="click để biết thêm những sở thích và hoạt động sinh hoạt của Hjnh thường ngày"><a
-                    href="so-thich-doi-song/sothich-doisong.html">sở thích và đời sống</a></button>
-        </li>
-        <br><br>
-        <li>
-            <button title="click để biết thêm về gia thế đồ sộ nhà hinh"><a
-                    href="thanh-phan-gia-dinh/thanhphan-giadinh.html">thành phần gia đình</a></button>
-        </li>
-    </ul>
-    <h3 style="color: red">các kênh thông tin liên lạc của hjnh gồm có:</h3>
-    <h4 style="color: #000000">gmail: nguyenhjnh2002@gmail.com</h4>
-    <h4 style="color: #000000">SĐT:03690***17</h4>
-    <button title="đây là trang facebook duy nhất của mình" style="background: #3737f5"><a
-            href="https://www.facebook.com/hinh.nguyenxuan.543/"><p style="color: white">FACEBOOK</p></a></button>
-    <button title="đây là trang instagram duy nhất của mình" style="background: palevioletred"><a
-            href="https://www.instagram.com/kee77_hjnh/?hl=vi"><p style="color:black">INSTAGRAM</p></a></button>
-</div>
+<body>
+<table width="1000" cellpadding="0" cellspacing="0" align="center">
+    <tr>
+        <td colspan="2">
+            <table style="width: 1000px;height: 200px" cellspacing="0" cellpadding="0">
+                <tr style="background: aqua">
+                    <td width="300" align="center"><img src="IMG_20201017_124741%20(3).jpg" width="300" height="309"
+                                                        title="đây là Hjnh"></td>
+                    <td width="700" align="center"><h1 style="color: darkorange;font-size: 80px"
+                                                       title="tính để trống title rồi nhưng thôi viết vào cho nó có chữ hâ hâ">
+                        giới thiệu về hjnh</h1></td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2" bgcolor="black">
+            <table width="1000" cellpadding="0" cellspacing="0">
+                <tr>
+                    <td title="bấm vào để biết chi tiết hơn về xuất thân của hjnh" width="200"
+                        align="center"><a href="so-yeu-ly-lich/in4hjnh.html" style="font-size: 20px;color: white">sơ yếu
+                        lý lịch</a></td>
+                    <td title="bấm vào để biết thêm về những sở thích của hjnh " width="200" align="center"><a
+                            href="so-thich/sothich.html" style="font-size: 20px;color: white">sở thích</a></td>
+                    <td title="bấm vào để biết thêm về đời sống của hjnh" width="200" align="center"><a
+                            href="doi-song/doi-song.html" style="font-size: 20px;color: white">đời sống</a></td>
+                    <td title="bấm vào để tìm hiểu về gia thế đồ sộ nhà hjnh" width="200" align="center"><a
+                            href="thanh-phan-gia-dinh/thanhphan-giadinh.html" style="font-size: 20px;color: white">gia
+                        đình</a></td>
+                    <td title="bấm vào để biết các kênh thông tin liên lạc của hjnh" width="200" align="center"><h3>
+                        <a
+                                href="thong-tin/thong-tin-lien-lac.html" style="font-size: 20px;color: white">thông tin
+                            cá nhân</a></h3></td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2" style="background: palegoldenrod"><h2 style="color: black;font-size: 40px" align="center">trên
+            đây là một vài thông tin về hjnh</h2></td>
+    </tr>
+</table>
 </body>
 </html>
