thay doi lan gan cuoi

--- a/so-thich/sothich.html
+++ b/so-thich/sothich.html
@@ -19,6 +19,7 @@
 <h4 style="color: #a910c4">-một số môn khác như vẽ nhảy...bla...bla</h4>
 <h2 style="color: #720000">sở thích về vật nuôi</h2>
 <h4 style="color: #720000">-vật nuôi thích nhất : mèo,mèo to,mèo nhỏ,mèo đực,mèo cái,túm lại chỉ cần là mèo</h4>
+    <img src="123240888_284029619448591_1738608394261570258_n.jpg" style="width:10%">
 <h4 style="color: #ff0000">-vật nuôi ghét nhất : con người yêu _ vì thiên hạ đồn thổi nuôi con này tốn công,của,mà chỉ nhận đc sừng</h4>
 <h2 style="color: #814a00">sở thích học tập</h2>
 <h4 style="color: #814a00">-không có môn thích nhất</h4>
@@ -26,7 +27,11 @@
 <h3 style="color: darkorange">sở thích du lịch : muốn đi tất cả mọi nơi nhưng không có $$$</h3>
 <h3 style="color: #ff0000">sở thích công nghệ : muốn sở hữu rất nhiều đồ công nghệ nhưng cũng không có tiền</h3>
 <h2 style="color: red">một vài sở thích khác!</h2>
-<h4 style="color: red">thích yên tĩnh</h4>
+    <h2 style="color: red">sở thích chơi game</h2>
+    <img src="122892481_3823612707671648_6424856468773044923_n.jpg" style="width:20%">
+    <img src="123264608_405595877494452_2456822921247146180_n.png" style="width:20%">
+
+    <h4 style="color: red">thích yên tĩnh</h4>
 <h4 style="color: red">thích tiền</h4>
 <h4 style="color: red">thích vàng</h4>
 <h4 style="color: red">thích kim cương</h4>
