--- a/so-yeu-ly-lich/in4hjnh.html
+++ b/so-yeu-ly-lich/in4hjnh.html
@@ -7,7 +7,7 @@
 <body style="background: palegoldenrod">
 <div id="content" align="center">
 <h1 style="color:deeppink">Sơ yếu lí lịch về Hjnh</h1>
-<img src="IMG_20201017_124741%20(2).jpg" style="width:400px;height:480px;">
+<img src="122851756_377646960019631_1546790849407693380_n.jpg" style="width:40%">
 <h4 style="color: red">-HJNH tên thật là Nguyễn Xuân Hjnh</h4>
 <h4 style="color: black">-biệt danh : Kee</h4>
 <h4 style="color: black">-sinh ngày 14 / 03 / 2002 "tuổi con ngựa"</h4>
