--- a/thanh-phan-gia-dinh/thanhphan-giadinh.html
+++ b/thanh-phan-gia-dinh/thanhphan-giadinh.html
@@ -8,6 +8,7 @@
 <div id="content" align="center">
 <h1 style="color: #0073ff">Hjnh và gia đình</h1>
 <h4 style="color: #1f1c1c">là con út trong gia đình có 3 anh chị em</h4>
+    <img src="122945777_796340410912965_9052250748287477496_n.jpg"style="width: 30%">
 <h4 style="color: #1f1c1c">bố là chủ tịch</h4>
 <h4 style="color: #1f1c1c">mẹ là phó chủ tịch</h4>
 <h4 style="color: #1f1c1c">anh trai là giám đốc</h4>
