thay doi be mac

--- a/doi-song/doi-song.html
+++ b/doi-song/doi-song.html
@@ -7,6 +7,7 @@
 <body>
 <div id="content" align="center">
     <h1>cuộc sống của tôi</h1>
+    <h2 style="color: red">bài viết chỉ mang tính chất có cho đủ bố cục chứ thật ra là coppy trên mạng <br>chủ thớt thậm chí còn chưa đọc</h2>
     <p>Nếu có một thời điểm nào đó trong cuộc sống, mà chúng ta cần phải và nên bị dúi xuống bùn lầy tăm tối, tốt nhất
         hãy chọn lúc 5 tuổi, lúc mà bạn có cả sức khoẻ lẫn sự dẻo dai; cả hưng phấn lấn thất vọng; cả niềm tin sắt
         đã lẫn sự ngoan cố mù quáng; cả sự hiểu biết bằng bản năng và trực giác chưa bị pha tạp lẫn sự tăm tối vì mơ hồ
