--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
             <table width="1000" cellpadding="0" cellspacing="0">
                 <tr>
                     <td title="bấm vào để biết chi tiết hơn về xuất thân của hjnh" width="200"
-                        align="center"><a href="so-yeu-ly-lich/in4hjnh.html" style="font-size: 20px;color: white">sơ yếu
+                        align="center"><a href="so-yeu-ly-lich/in4hjnh.html" style="font-size: 20px;color: white;text-decoration: none">sơ yếu
                         lý lịch</a></td>
                     <td title="bấm vào để biết thêm về những sở thích của hjnh " width="200" align="center"><a
-                            href="so-thich/sothich.html" style="font-size: 20px;color: white">sở thích</a></td>
+                            href="so-thich/sothich.html" style="font-size: 20px;color: white;text-decoration: none">sở thích</a></td>
                     <td title="bấm vào để biết thêm về đời sống của hjnh" width="200" align="center"><a
-                            href="doi-song/doi-song.html" style="font-size: 20px;color: white">đời sống</a></td>
+                            href="doi-song/doi-song.html" style="font-size: 20px;color: white;text-decoration: none">đời sống</a></td>
                     <td title="bấm vào để tìm hiểu về gia thế đồ sộ nhà hjnh" width="200" align="center"><a
-                            href="thanh-phan-gia-dinh/thanhphan-giadinh.html" style="font-size: 20px;color: white">gia
+                            href="thanh-phan-gia-dinh/thanhphan-giadinh.html" style="font-size: 20px;color: white;text-decoration: none">gia
                         đình</a></td>
                     <td title="bấm vào để biết các kênh thông tin liên lạc của hjnh" width="200" align="center"><h3>
                         <a
-                                href="thong-tin/thong-tin-lien-lac.html" style="font-size: 20px;color: white">thông tin
+                                href="thong-tin/thong-tin-lien-lac.html" style="font-size: 20px;color: white;text-decoration: none">thông tin
                             cá nhân</a></h3></td>
                 </tr>
             </table>
