--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hjnh test all</title>
+    <title>thông tin về hjnh</title>
 </head>
 <body>
 <table width="1000" cellpadding="0" cellspacing="0" align="center">
