--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <td title="bấm vào để biết các kênh thông tin liên lạc của hjnh" width="200" align="center"><h3>
                         <a
                                 href="thong-tin/thong-tin-lien-lac.html" style="font-size: 20px;color: white;text-decoration: none">thông tin
-                            cá nhân</a></h3></td>
+                            liên lạc</a></h3></td>
                 </tr>
             </table>
         </td>
