--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             <table width="1000" cellpadding="0" cellspacing="0">
                 <tr>
                     <td title="bấm vào để biết chi tiết hơn về xuất thân của hjnh" width="200"
-                        align="center"><a href="so-yeu-ly-lich/in4hjnh.html" style="font-size: 20px;color: white;text-decoration: none">sơ yếu
-                        lý lịch</a></td>
-                    <td title="bấm vào để biết thêm về những sở thích của hjnh " width="200" align="center"><a
-                            href="so-thich/sothich.html" style="font-size: 20px;color: white;text-decoration: none">sở thích</a></td>
-                    <td title="bấm vào để biết thêm về đời sống của hjnh" width="200" align="center"><a
-                            href="doi-song/doi-song.html" style="font-size: 20px;color: white;text-decoration: none">đời sống</a></td>
-                    <td title="bấm vào để tìm hiểu về gia thế đồ sộ nhà hjnh" width="200" align="center"><a
+                        align="center"><h3><a href="so-yeu-ly-lich/in4hjnh.html" style="font-size: 20px;color: white;text-decoration: none">sơ yếu
+                        lý lịch</a></h3></td>
+                    <td title="bấm vào để biết thêm về những sở thích của hjnh " width="200" align="center"><h3><a
+                            href="so-thich/sothich.html" style="font-size: 20px;color: white;text-decoration: none">sở thích</a></h3></td>
+                    <td title="bấm vào để biết thêm về đời sống của hjnh" width="200" align="center"><h3><a
+                            href="doi-song/doi-song.html" style="font-size: 20px;color: white;text-decoration: none">đời sống</a></h3></td>
+                    <td title="bấm vào để tìm hiểu về gia thế đồ sộ nhà hjnh" width="200" align="center"><h3><a
                             href="thanh-phan-gia-dinh/thanhphan-giadinh.html" style="font-size: 20px;color: white;text-decoration: none">gia
-                        đình</a></td>
+                        đình</a></h3></td>
                     <td title="bấm vào để biết các kênh thông tin liên lạc của hjnh" width="200" align="center"><h3>
                         <a
                                 href="thong-tin/thong-tin-lien-lac.html" style="font-size: 20px;color: white;text-decoration: none">thông tin
@@ -42,7 +42,7 @@
         </td>
     </tr>
     <tr>
-        <td colspan="2" style="background: palegoldenrod"><h2 style="color: black;font-size: 40px" align="center">trên
+        <td colspan="2" style="background: palegoldenrod"><h2 style="color: red;font-size: 40px" align="center">trên
             đây là một vài thông tin về hjnh</h2></td>
     </tr>
 </table>
