--- a/index.html
+++ b/index.html
@@ -2,49 +2,124 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>thông tin về hjnh</title>
+    <title>in 4 của hjnh</title>
 </head>
 <body>
 <table width="1000" cellpadding="0" cellspacing="0" align="center">
     <tr>
         <td colspan="2">
             <table style="width: 1000px;height: 200px" cellspacing="0" cellpadding="0">
-                <tr style="background: aqua">
+                <tr style="background: #000000">
                     <td width="300" align="center"><img src="IMG_20201017_124741%20(3).jpg" width="300" height="309"
                                                         title="đây là Hjnh"></td>
-                    <td width="700" align="center"><h1 style="color: darkorange;font-size: 80px"
+                    <td width="700" align="center"><font face="Algerian"><h1 style="color: darkorange;font-size: 80px;"
                                                        title="tính để trống title rồi nhưng thôi viết vào cho nó có chữ hâ hâ">
-                        giới thiệu về hjnh</h1></td>
+                        GIỚI THIỆU VỀ HJNH</h1></font></td>
                 </tr>
             </table>
         </td>
     </tr>
     <tr>
+        <td colspan="2" align="center" bgcolor="#000000" height="50">
+            <h4 style="color: white">dưới đây là một vài yếu tố hình thành nên tính cách con người hjnh</h4>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="500" height="30" bgcolor="#8a2be2"><h4 align="center" style="color: chartreuse;"
+                                                          title="cái đầu tiên mình phải tự hào vì mình là ng Việt Nam cái đã">
+            Người Việt</h4></td>
+        <td bgcolor="#ff7f50" width="500" height="30">
+            <h4 style="color: black" align="center"
+                title="trước khi hiền lành mình cũng không hiền lắm đâu nên đuèng có mà bắt nạt mình nhé">một chút hiền
+                lành,một chút dễ tính</h4>
+        </td>
+    </tr>
+
+
+    <tr>
+        <td bgcolor="#ff7f50" width="500" height="30">
+            <h4 style="color: black" align="center"
+                title="là thành phần tấu hài không thể thiếu trong những cuộc vui haha">một chút vui vẻ</h4>
+        </td>
+        <td width="500" height="30" bgcolor="#8a2be2"><h4 align="center" style="color: chartreuse;"
+                                                          title="đây là cách tốt nht để không bị bỏ lại phía sau">một
+            chút hòa đồng</h4></td>
+    </tr>
+
+
+    <tr>
+        <td width="500" height="30" bgcolor="#8a2be2"><h4 align="center" style="color: chartreuse;"
+                                                          title="nhây nhoi lầy lội chắc ro bản năng thôi">một chút nhây
+            một chút lầy</h4></td>
+        <td bgcolor="#ff7f50" width="500" height="30">
+            <h4 style="color: black" align="center" title="cái này thật ra là phải nhiều chút cơ">một chút nói
+                nhiều</h4>
+        </td>
+    </tr>
+
+
+    <tr>
+        <td bgcolor="#ff7f50" width="500" height="30">
+            <h4 style="color: black" align="center" title="việc này thường được thể hiện qua việc hát nhiều">một chút
+                yêu đời</h4>
+        </td>
+        <td width="500" height="30" bgcolor="#8a2be2"><h4 align="center" style="color: chartreuse;"
+                                                          title="nhìn ngáo thế chứ trước lúc biết code mình năng động lắm đấy!">
+            một chút năng động</h4></td>
+    </tr>
+
+
+    <tr>
+        <td width="500" height="30" bgcolor="#8a2be2"><h4 align="center" style="color: chartreuse;"
+                                                          title="cái này thí một chút xíu thôi hâ hâ">một chút tự
+            tin</h4></td>
+        <td bgcolor="#ff7f50" width="500" height="30">
+            <h4 style="color: black" align="center"
+                title="mình cảm thấy rất là may mắn vì có mọi người đã và sẽ cùng mình đòng hành trong cuộc sống đầy khó khăn này">
+                và một chút may mắn</h4>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2" align="center" bgcolor="#00bfff" height="50">
+            <h4 style="color: red">để hiểu dõ hơn nữa về hjnh bạn có thể lựa chọn các mục ở bên dưới đây nhé</h4>
+        </td>
+    </tr>
+
+
+    <tr>
         <td colspan="2" bgcolor="black">
             <table width="1000" cellpadding="0" cellspacing="0">
                 <tr>
-                    <td title="bấm vào để biết chi tiết hơn về xuất thân của hjnh" width="200"
-                        align="center"><h3><a href="so-yeu-ly-lich/in4hjnh.html" style="font-size: 20px;color: white;text-decoration: none">sơ yếu
+                    <td bgcolor="#eee8aa" title="bấm vào để biết chi tiết hơn về xuất thân của hjnh" width="200"
+                        align="center"><h3><a href="so-yeu-ly-lich/in4hjnh.html"
+                                              style="font-size: 20px;color: red;text-decoration: none">sơ yếu
                         lý lịch</a></h3></td>
                     <td title="bấm vào để biết thêm về những sở thích của hjnh " width="200" align="center"><h3><a
-                            href="so-thich/sothich.html" style="font-size: 20px;color: white;text-decoration: none">sở thích</a></h3></td>
-                    <td title="bấm vào để biết thêm về đời sống của hjnh" width="200" align="center"><h3><a
-                            href="doi-song/doi-song.html" style="font-size: 20px;color: white;text-decoration: none">đời sống</a></h3></td>
+                            href="so-thich/sothich.html" style="font-size: 20px;color: yellow;text-decoration: none">sở
+                        thích</a></h3></td>
+                    <td bgcolor="red" title="bấm vào để biết thêm về đời sống của hjnh" width="200" align="center"><h3><a
+                            href="doi-song/doi-song.html" style="font-size: 20px;color: black;text-decoration: none">đời
+                        sống</a></h3></td>
                     <td title="bấm vào để tìm hiểu về gia thế đồ sộ nhà hjnh" width="200" align="center"><h3><a
-                            href="thanh-phan-gia-dinh/thanhphan-giadinh.html" style="font-size: 20px;color: white;text-decoration: none">gia
+                            href="thanh-phan-gia-dinh/thanhphan-giadinh.html"
+                            style="font-size: 20px;color: yellow;text-decoration: none">gia
                         đình</a></h3></td>
-                    <td title="bấm vào để biết các kênh thông tin liên lạc của hjnh" width="200" align="center"><h3>
+                    <td bgcolor="#eee8aa" title="bấm vào để biết các kênh thông tin liên lạc của hjnh" width="200" align="center"><h3>
                         <a
-                                href="thong-tin/thong-tin-lien-lac.html" style="font-size: 20px;color: white;text-decoration: none">thông tin
+                                href="thong-tin/thong-tin-lien-lac.html"
+                                style="font-size: 20px;color: red;text-decoration: none">thông tin
                             liên lạc</a></h3></td>
                 </tr>
             </table>
         </td>
     </tr>
+
+
     <tr>
-        <td colspan="2" style="background: palegoldenrod"><h2 style="color: red;font-size: 40px" align="center">trên
-            đây là một vài thông tin về hjnh</h2></td>
+        <td colspan="2" style="background: #0fb760"><h2 style="color: black;font-size: 40px" align="center">trên đây là
+            một vài thông tin về hjnh</h2></td>
     </tr>
 </table>
 </body>
-</html>
+<html>
